Make name generic

--- a/blocks/test.liquid
+++ b/blocks/test.liquid
@@ -2,8 +2,8 @@ Hello world
 
 {% schema %}
 {
-    "name": "Order history",
+    "name": "Custom app block",
     "target": "section",
-    "class": "doppelganger-order-history"
+    "class": "custom-app-block"
 }
 {% endschema %}
